src/test/ui/error-codes/E0027-teach.stderr
error[E0027]: pattern does not mention field `name`
  --> $DIR/E0027-teach.rs:22:9
   |
22 |         Dog { age: x } => {}
   |         ^^^^^^^^^^^^^^ missing field `name`
   |
   = note: This error indicates that a pattern for a struct fails to specify a sub-pattern for every one of the struct's fields. Ensure that each field from the struct's definition is mentioned in the pattern, or use `..` to ignore unwanted fields.

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0027"
